--- a/src/index.css
+++ b/src/index.css
@@ -37,3 +37,23 @@ code {
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+
+@media print {
+  /* Hide template selector and image library during print */
+  body > div > div:first-child > div:first-child,
+  body > div > div:first-child > div:last-child {
+    display: none !important;
+  }
+
+  /* Reset the comic container margin to center the comic page */
+  body > div > div:first-child > div:nth-child(2) {
+    margin: 0 !important;
+    padding: 0 !important;
+    overflow: visible !important;
+  }
+
+  /* Remove background color during print */
+  body {
+    background: none !important;
+  }
+}
